ubuntu-release-upgrader (1:16.04.4) xenial; urgency=medium

  * DistUpgrade/DistUpgradeMain.py: check the apt cache to see what version of
    apt is installed rather than using the apt VERSION string. (LP: #1306065)
  * test/test_sources_list.py: resolve test failures.

 -- Brian Murray <brian@ubuntu.com>  Wed, 13 Jan 2016 11:11:50 -0800

ubuntu-release-upgrader (1:16.04.3) xenial; urgency=medium

  * DistUpgrade/DistUpgradeController.py: if a BaseMetaPkg has no origins,
    because an Ubuntu mirror has been deactivated, then create a useful
    sources.list file that parallels the one for the deactivated mirror.
    (LP: #1511783)
  * utils/update_mirrors.py: Instead of just appending new mirrors to the
    mirrors.cfg file also remove mirrors that are no longer valid.
    (LP: #1463680)

 -- Brian Murray <brian@ubuntu.com>  Wed, 18 Nov 2015 11:05:19 -0800

ubuntu-release-upgrader (1:16.04.2) xenial; urgency=medium

  * DistUpgrade/DistUpgradeQuirks.py: protect against the linux metapackage
    not being available in the cache. (LP: #1511831)

 -- Brian Murray <brian@ubuntu.com>  Mon, 02 Nov 2015 09:50:02 -0800

ubuntu-release-upgrader (1:16.04.1) xenial; urgency=medium

  [ Barry Warsaw ]
  * Don't try to import janitor and NvidiaDetector in a package relative
    to this one, to avoid the possibility of dangling symlinks when the
    packages actually containing these modules is not installed.
    (LP: #1485093)
  * debian/python3-distupgrade.links: Removed.

  [ Brian Murray ]
  * DistUpgrade/{EOL,}ReleaseAnnouncement,
    DistUpgrade/DistUpgrade/window_main.ui,
    data/gtkbuilder/DistUpgrade.ui,
    data/DistUpgrade.cfg,
    data/DistUpgrade.cfg.trusty,
    pre-build.sh:
    - updated for 15.10->16.04
  * DistUpgrade/DistUpgradeQuirks.py: add in a quirk to ensure that a linux
    metapackage is installed after the release upgrade. (LP: #1509305)

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeQuirks.py: improve linux metapackage check and add