@@ -3,8 +3,9 @@ ubuntu-release-upgrader (1:16.04.4) xenial; urgency=medium
   * DistUpgrade/DistUpgradeMain.py: check the apt cache to see what version of
     apt is installed rather than using the apt VERSION string. (LP: #1306065)
   * test/test_sources_list.py: resolve test failures.
+  * DistUpgrade/DistUpgradeCache.py: log packages which will be downgraded.
 
- -- Brian Murray <brian@ubuntu.com>  Wed, 13 Jan 2016 11:11:50 -0800
+ -- Brian Murray <brian@ubuntu.com>  Wed, 13 Jan 2016 11:33:25 -0800
 
 ubuntu-release-upgrader (1:16.04.3) xenial; urgency=medium
 
